--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/LukeAskew/prism-github@master/prism-github.css"
+    />
     <title>Vite App</title>
   </head>
   <body>
